--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body>
         <header class="header">
             <div class="container">
-                <h1>Blue Diamond</h1>
+                <h1>Double Diamond</h1>
                 <form action="resultados.html" method="get">
                     <input type="text" id="search" name="q" placeholder="Pesquisar">
                     <button type="submit">Buscar</button>
