--- a/index.html
+++ b/index.html
@@ -1,41 +1,108 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Loja Double Diamond</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <header class="header">
-            <div class="container">
-                <h1>Double Diamond</h1>
-                <form action="resultados.html" method="get">
-                    <input type="text" id="search" name="q" placeholder="Pesquisar">
-                    <button type="submit">Buscar</button>
-                </form>
-                <nav>
-                    <ul class="links">
-                        <li><a href="#inicio">Início</a></li>
-                        <li><a href="#produtos">Produtos</a></li>
-                        <li><a href="#about">Sobre mim</a></li>
-                        <li><a href="#contato">Contato</a></li>
-                        <li><a href="#carrinho">Carrinho</a></li>
-                    </ul>
-                </nav>
+    <header class="header">
+        <div class="container">
+            <img src="img/logo1.png" alt="imagem de um diamante azul com as palavras 'Double Diamond' ao lado">
+            <form>
+                <input type="text" id="search" name="q" placeholder="Pesquisar">
+                <button type="submit">Buscar</button>
+            </form>
+            <nav>
+                <ul class="links">
+                    <li><a href="#inicio">Início</a></li>
+                    <li><a href="#produtos">Produtos</a></li>
+                    <li><a href="#about">Sobre mim</a></li>
+                    <li><a href="#contato">Contato</a></li>
+                    <li><a href="#carrinho">Carrinho</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header> 
+    <section id="inicio">
+        <img src="img/inicio.webp">
+    </section>
+    <section>
+        <div id="produtos">
+            <div class="roupa">
+                <img src="img/camisa1.jpg" alt="">
+                <p>Blusa de algodão com degradê</p>
+                <p>Tamanho - P,M,G,GG</p>
+                <h2>R$55,00</h2>
             </div>
-        </header>
-    </body>
-    </html>
-    
+            <div class="roupa">
+                <img src="img/camisa2.jpg" alt="">
+                <p>Blusa de algodão barnca</p>
+                <p>Tamanho - P,M,G,GG</p>
+                <h2>R$50,00</h2>
+            </div>
+            <div class="roupa">
+                <img src="img/camisa3.jpg" alt="">
+                <p>Blusa de algodão branca</p>
+                <p>Tamanho - P,M,G,GG</p>
+                <h2>R$50,00</h2>
+            </div>
+            <div class="roupa">
+                <img src="img/camisa4.jpg" alt="">
+                <p>Blusa de algodão com degradê</p>
+                <p>Tamanho - P,M,G,GG</p>
+                <h2>R$55,00</h2>
+            </div>
+            <div class="roupa">
+                <img src="img/moletom1.jpg" alt="">
+                <p>Moletom de algodão branco</p>
+                <p>Tamanho - P,M,G,GG</p>
+                <h2>R$90,00</h2>
+            </div>
+            <div class="roupa">
+                <img src="img/moletom2.jpg" alt="">
+                <p>Moletom de algodão branco</p>
+                <p>Tamanho - P,M,G,GG</p>
+                <h2>R$90,00</h2>
+            </div>
+            <div class="roupa">
+                <img src="img/moletom3.jpg" alt="">
+                <p>Moletom cropped de algodão branco</p>
+                <p>Tamanho - P,M,G,GG</p>
+                <h2>R$85,00</h2>
+            </div>
+            <div class="roupa">
+                <img src="img/moletom4.jpg" alt="">
+                <p>Moletom cropped de algodão c/ degradê</p>
+                <p>Tamanho - P,M,G,GG</p>
+                <h2>R$90,00</h2>
+            </div>
+            <div class="roupa">
+                <img src="img/gorro1.jpg" alt="">
+                <p>Gorro branco</p>
+                <p>Tamanho único</p>
+                <h2>R$25,00</h2>
+            </div>
+            <div class="roupa">
+                <img src="img/gorro2.jpg" alt="">
+                <p>Gorro branco</p>
+                <p>Tamanho único</p>
+                <h2>R$25,00</h2>
+            </div>
+            <div class="roupa">
+                 <img src="img/gorro3.jpg" alt="">
+                <p>Gorro azul</p>
+                <p>Tamanho único</p>
+                <h2>R$25,00</h2>
+             </div>
+             <div class="roupa">
+                <img src="img/gorro4.jpg" alt="">
+                <p>Gorro cinza</p>
+                <p>Tamanho único</p>
+                <h2>R$25,00</h2>
+            </div>
+        </div>
+     </section>
 </body>
 </html>
