--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loja Double Diamond</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="img/icon.png">
 </head>
 <body>
     <!-- Beatriz -->
@@ -27,7 +28,7 @@
         </div>
     </header> 
     <section id="inicio">
-        <img src="img/inicio.webp">
+        <img src="img/inicio.png">
     </section>
 
     <!-- Jéssica -->
@@ -134,5 +135,36 @@
             <button type="submit">Enviar</button>
         </form>
     </section>
+
+    <!-- Jéssica -->
+     <footer>
+        <div class="a">
+            <ul style="text-align: center;">
+                <li class="btn"><img src="img/loja.jpg" style="width: 40px;mix-blend-mode: multiply;"></li>
+                <li class="btn">Retire na loja</li>
+            </ul>
+            <div class="b">
+                <p>Double Diamond nas Redes Sociais</p>
+                <ul class="social">
+                    <li class="btn"><img src="img/insta.png" alt="Logo Instagram"></li>
+                    <li class="btn"><img src="img/pin.png" alt="logo Pinterest"></li>
+                    <li class="btn"><img src="img/X.png" alt="Logo X"></li>
+                    <li class="btn"><img src="img/face.png" alt="Logo Facebook"></li>
+                </ul>
+            </div>
+            <ul>
+                <li style="font-weight: bold;">Perguntas Frequentes</li>
+                <li class="btn">&emsp;Política de Privacidade</li>
+                <li class="btn">&emsp;Central de Privacidade</li>
+                <li class="btn">&emsp;Termo de Uso</li>
+                <li class="btn">&emsp;Trocas e Devoluções</li>
+                <li class="btn">&emsp;Acompanhe seu Pedido</li>
+            </ul>
+        </div>
+        <div class="copyrigth">
+            <p>&copy; 2024 Loja Double Diamond. Todos os direitos reservados.</p>
+            <p>&copy; 2024 imagens dos produtos por github.com/jessicacristinass. Todos os direitos reservados.</p>
+        </div>
+     </footer>
 </body>
 </html>
